# diiLo

./: Cargo.toml  README.adoc  build.rs
.github/workflows/: rust.yml
hacking/: pre-commit
src/app/: action_create.rs  action_delete.rs  action_label.rs  action_local.rs  action_move.rs  action_orders.rs  action_solder.rs  caching_panel_data.rs  errs.rs  kbd.rs  mod.rs  model.rs  panel_labels.rs  panel_locations.rs  panel_parts.rs  panel_projects.rs  panel_sources.rs  panel_typesel.rs  render.rs  tests.rs  view.rs
src/app/render/: filter.rs  mod.rs  render_icons.rs  search.rs
src/store/: cache.rs  conversions.rs  mod.rs  search.rs  serializer.rs  types.rs
tests/: app.rs  basic_counts.rs  ledger_deserializer.rs  render.rs  store_events.rs
tests/resources/objects/: location-a.md  location-b.md  project-x.md  test-part.md  test-pieces-force-simple.md  test-pieces.md
tests/resources/simple/ledger/: 0000-import.txt
tests/resources/simple/md/: home.md  test-part.md
tests/testutils/: mod.rs
